fixed comments, message and scrollbar

--- a/src/components/pages/my-page/comments/comments.module.css
+++ b/src/components/pages/my-page/comments/comments.module.css
@@ -8,7 +8,7 @@
 
 .comment {
     display: flex;
-    padding: 30px 30px 10px;
+    padding: 30px;
 }
 
 .avatar {
